--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "expo": "~54.0.27",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.10",
+    "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.17",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
