--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Give $(PRODUCT_NAME) permission to access your photos",
         "NSPhotoLibraryAddUsageDescription": "Give $(PRODUCT_NAME) permission to save photos"
-      }
+      },
+      "bundleIdentifier": "com.malenamalenita.glitches-project"
     },
     "android": {
       "edgeToEdgeEnabled": true,
@@ -20,7 +21,11 @@
       "permissions": [
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
-        "android.permission.ACCESS_MEDIA_LOCATION"
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
+        "android.permission.READ_MEDIA_AUDIO"
       ],
       "package": "com.malenamalenita.glitches_project"
     },
